--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+dj-database-url==2.1.0
 Django==4.2.7
 django-cors-headers==4.3.0
 djangorestframework==3.14.0
@@ -8,5 +9,6 @@ Pillow==10.1.0
 psycopg2==2.9.9
 pytz==2023.3.post1
 sqlparse==0.4.4
+typing_extensions==4.8.0
 tzdata==2023.3
 whitenoise==6.6.0
